K8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP  # LoadBalancer 
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3006       # Public PORT 
    targetPort: 3005 #container port 
    nodePort: 31112
